k8s/externalname-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dash-report-app
  namespace: default
spec:
  type: ExternalName
  externalName: dash-report-app.dashs.svc.cluster.local
  ports:
  - port: 8501
