k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dash-report-app
  namespace: dashs
spec:
  type: ClusterIP
  selector:
    app: dash-report-app
  ports:
  - port: 8501
    targetPort: 8501
